--- a/program/css/style.css
+++ b/program/css/style.css
@@ -40,8 +40,8 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
 
 header {
     background-image: url('..//img/background_16771.png');
-    width: 1600px;
-    height: 1000px;
+    width: 100%;
+    min-height: 100vh;
     background-color: #f4f4f5;
     background-size: cover;
     background-position: center;
@@ -53,6 +53,10 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.header__menu{
+    
 }
 
 .header__list{
@@ -67,12 +71,15 @@ header {
     line-height: 1.2;
     font-weight: 400;
     color: #26272d;
+    margin-right: 40px;
+    margin-right: 30px;
 }
 
 .header__item--opacity{
     padding: 5px 10px;
     opacity: 0.4;
     color: #1b1c1e;
+    margin-right: 30px;
 }
 
 .header__btn{
@@ -81,12 +88,29 @@ header {
     background-color: #267df4;
     border-radius: 21px;
     color: #ffffff;
+    position: relative;
+    text-align: right;
+    padding-right: 30px;
+}
+
+.header__btn::before{
+    content: url("../img/apple-icon.png");
+    position: absolute;
+    left: 15px;
+    bottom: 10px;
 }
 
 .header__logo{
     width: 140px;
     height: 13px;
     
+    
+}
+
+.header__wrap{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .header__title{
@@ -95,23 +119,24 @@ header {
     line-height: 72px;
     font-weight: 400;
     color: #26272d;
-    padding-top: 128px;
+    margin-top: 125px;
     text-align: center;
 }
 
 .header__text {
-    padding-top: 40px;
-    margin-left: 175px;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    max-width: 782px;
     font-family: Lato;
     font-size: 20px;
     line-height: 28px;
     font-weight: 400;
     color: #8c8f94;
-    max-width: 781px
+    margin: 40px auto 0;
+    text-align: center;
 }
 
-.header__btn-head{
+.header__btn-transparent{
     width: 205px;
     height: 50px;
     border: 1px solid #26272d;
@@ -121,8 +146,15 @@ header {
     line-height: 1.2;
     font-weight: 400;
     color: #26272d;
-    margin: 62px 0 0 460px;
+    margin-top: 80px;
+    position: relative;
 }    
+
+.header__btn-transparent::before{
+    position: absolute;
+    content: url("../img/play-icon.png");
+    left: 25px;
+}
 
 .testimonials{
     display: flex;
