--- a/program/css/style.css
+++ b/program/css/style.css
@@ -157,18 +157,32 @@ header {
 }
 
 .testimonials{
-    display: flex;
+    
+}
 
-    padding: 286px 171px 167px 252px;
+.testimonials__content{
+    display: flex;
+    justify-content: center;
 }
 
 .testimonials__box{
-    margin-right: 77px;
-    max-width: 496px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 493px;
+    margin: 210px auto;
+    margin-right: 55px;
 }
 
 .testimonials__block{
-    max-width: 500px
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 500px;
+    margin: 0 auto; 
+    margin-left: 55px;
 }
 
 .testimonials__title{
@@ -189,13 +203,15 @@ header {
 }
 
 .about{
-    display: flex;
+    
+}
 
-    padding: 86px 185px 42px 0;
+.about__conteiner{
+    display: flex;
 }
 
 .about__content{
-    padding-top: 138px;
+
 }
 
 .about__title{
@@ -204,7 +220,8 @@ header {
     line-height: 52px;
     font-weight: 400;
     color: #26272d;
-    padding-bottom: 73px;
+    margin-bottom: 70px;  
+    max-width: 230px;  
 }
 
 .about__txt{
@@ -213,10 +230,15 @@ header {
     line-height: 28px;
     font-weight: 400;
     color: #8c8f94;
+    max-width: 470px;
+}
+
+.about__wrap{
+    display: flex;
+    margin-top: 75px;
 }
 
 .about__btn{
-    margin-top: 89px;
     width: 202px;
     height: 42px;
     background-color: #267df4;
@@ -230,6 +252,7 @@ header {
 }
 
 .about__link{
+    display: block;
     width: 142px;
     height: 42px;
     border: 1px solid #26272d;
@@ -240,16 +263,25 @@ header {
     font-weight: 400;
     color: #26272d;
     margin-left: 20px;
-    padding: 10px 31px;
+    padding-top: 10px;
+    text-align: center;
+    
 }
 
 .location{
-    padding: 205px 0 198px 133px;
+    
+}
+
+.location__inner{
     display: flex;
+    justify-content: space-between;
+    margin-top: 200px;
 }
 
 .location__content{
-    margin-right: 75px;
+    display: flex;
+    flex-direction: column;
+    margin-left: 210px;
 }
 
 .location__title{
@@ -258,7 +290,9 @@ header {
     line-height: 52px;
     font-weight: 400;
     color: #26272d;
-    padding-bottom: 64px;
+    max-width: 280px;
+    margin-bottom: 65px;
+    
 }
 
 .location__txt{
@@ -267,10 +301,10 @@ header {
     line-height: 28px;
     font-weight: 400;
     color: #8c8f94;
+    max-width: 470px;
 }
 
 .location__subtitle{
-    padding-top: 64px;
     font-family: Lato;
     font-size: 12px;
     line-height: 22px;
@@ -278,15 +312,19 @@ header {
     text-transform: uppercase;
     letter-spacing: 0.1em;
     color: #26272d;
+    margin-top: 65px;
+}
+
+.location__icon{
+    margin-top: 30px;
 }
 
 .location__img--drop{
-    padding-top: 31px;
-    padding-right: 31px;
+   
 }   
 
 .location__img--ever{
-    padding-top: 31px;
+    
 }
 
 .interface{
