--- a/program/css/style.css
+++ b/program/css/style.css
@@ -885,6 +885,9 @@ header {
 }
 
 .subscription__form{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     border: 1px solid #26292c;
     border-radius: 25px;
     width: 562px;
@@ -914,6 +917,7 @@ header {
     font-weight: 400;
     color: #ffffff;
     text-align: center;
+    margin-right: 5px;
     
 }
 
@@ -934,7 +938,10 @@ header {
 
 .footer__top{
     display: flex;
-    justify-content: space-around;
+}
+
+.footer__box{
+
 }
 
 .footer__txt{
@@ -953,8 +960,12 @@ header {
 .footer__list{
     display: flex;
     justify-content: space-between;
-    padding-top: 41px;
+    margin-top: 41px;
     max-width: 222px;
+}
+
+.footer__learn{
+
 }
 
 .learn__title{
@@ -980,6 +991,10 @@ header {
     color: #8c8f94; 
 }
 
+.footer__about{
+    
+}
+
 .about__title--bottom{
     font-family: Lato;
     font-size: 12px;
@@ -1000,6 +1015,10 @@ header {
     line-height: 36px;
     font-weight: 400;
     color: #8c8f94;
+}
+
+.footer__support{
+
 }
 
 .support__title{
@@ -1025,6 +1044,42 @@ header {
 }
 
 .footer__bottom{
-
+    display: flex;
+    justify-content: space-around;
     margin-top: 90px;
+}
+
+.footer__bottom-span{
+    font-family: Lato;
+    font-size: 14px;
+    line-height: 24px;
+    font-weight: 400;
+    color: #8c8f94;
+}
+
+.footer__bottom-link{
+    font-family: Lato;
+    font-size: 14px;
+    line-height: 24px;
+    font-weight: 400;
+    text-decoration: underline;
+    color: #3b55e6;
+}
+
+.footer__end{
+    font-family: Lato;
+    font-size: 9px;
+    line-height: 22px;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    color: #26272d;
+    position: relative;
+}
+
+.footer__end::after{
+    position: absolute;
+    content: url("../img/logo.png");
+    left: 125px;
+    top: -10px;
 }
