--- a/program/css/style.css
+++ b/program/css/style.css
@@ -38,7 +38,7 @@ ul li{list-style: none;}
 img{vertical-align: top;}
 h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
 
-header {
+.header {
     background-image: url('..//img/background_16771.png');
     width: 100%;
     height: 135vh;
@@ -48,7 +48,11 @@ header {
     padding: 60px 215px;
     
 }
-
+.container {
+    max-width: 1190px;
+    margin: 0 auto;
+    padding: 0 10px;
+}
 .header-top{
     display: flex;
     justify-content: space-between;
@@ -199,8 +203,18 @@ header {
     line-height: 26px;
     font-weight: 400;
     color: #8c8f94;
+    position: relative;
 }
-
+.testimonials__txt::after {
+content: '';
+display: block;
+background-image: url("../img/Clock-icon.png");
+width: 100px;
+height: 100px;
+position: absolute;
+top: 0;
+left: 0;
+}
 .about{
     
 }
@@ -594,9 +608,12 @@ header {
 .reviews__excerpt::after{
     position: absolute;
     content: url("../img/star-icon.png");
+        content: url("../img/star-icon.png");
     left: 170px;
     top: 110px;
 }
+
+
 
 .reviews__span{
     display: flex;
