--- a/program/css/style.css
+++ b/program/css/style.css
@@ -163,6 +163,13 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
     
 }
 
+.testimonials__container{
+    max-width: 1190px;
+    margin: 0 auto;
+    padding: 0 10px;
+
+}
+
 .testimonials__content{
     display: flex;
     justify-content: center;
@@ -206,9 +213,9 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
     position: relative;
 }
 .testimonials__txt::after {
-content: '';
+content: url("../img/Clock-icon.png");
 display: block;
-background-image: url("../img/Clock-icon.png");
+
 width: 100px;
 height: 100px;
 position: absolute;
